# jk-ece210

./: .editorconfig  .envrc  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .yamlfmt.yaml  README.md  SConstruct  SConstruct.py  dev-requirements.txt  flake.nix  pyproject.toml  requirements.txt  treefmt.toml
.github/workflows/: release.yml
src/: SConscript  SConscript.py  git-hash.tex.in  hyperref.tex  postamble.tex  preamble.tex  submissions.tex  syllabus.tex
src/assignments/: 01-rolling-in-the-mud.tex  02-a-new-way-of-thinking.tex  03-amogus.tex  04-func-off.tex  05-plotting-scheming-even.tex  06-four-year-transform.tex  07-under-pressure.tex  08-must-be-easy.tex  SConscript  SConscript.py
src/assignments/07-under-pressure.d/: 40p_1000ms.csv  SConscript  SConscript.py  data.eps
src/lessons/: 01-matlab-at-a-glance.tex  02-vectorization.tex  03-indexing.tex  04-functions.tex  05-plotting.tex  06-filter-analysis.tex  07-filter-design.tex  08-symbolic-math.tex  09-fixed-point-arithmetic.tex  10-image-compression.tex  SConscript  SConscript.py
src/lessons/01-matlab-at-a-glance.d/: SConscript.py  instantiate-matrix.m
src/lessons/02-vectorization.d/: SConscript  basic-vector.m  basic-vector.txt  broadcast-implicit.m  broadcast.m  broadcast.txt  exp.m  exp.txt  flatten.m  flatten.txt  lazy-reshape.m  lazy-reshape.txt  linear-index.m  linspace.m  linspace.txt  matrix-index.m  matrix-index.txt  multiple-elements.m  multiple-elements.txt  penultimate-element.m  penultimate-element.txt  randi.m  reshape.m  step-vector.m  step-vector.txt  sum-all.m  sum-all.txt  (+5 more)
(+139 files in other folders)
